
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2008-01-07 DP  1.8.2  Ensure enums are offered as datatypes for columns.
2008-01-07 DP  1.8.2  Fix column dialogue to allow proper modification of array
                      columns per Erwin.
2008-01-07 DP  1.8.2  Newer build of EnterpriseDB consistently strip trailing
                      semi-colons from package headers and bodies. Update 
                      reverse engineering allow for this.
2008-01-07 DP  1.8.2  Ensure the properties dialogues will work sanely with
                      objects named " " (!).
2008-01-07 DP  1.8.2  EDB-SPL functions require NULL to be passed in out-params
                      when debugging.
2008-01-07 DP  1.8.2  Ensure that EDB-SPL trigger DDL code is appropriately
                      formatted on newer builds of EnterpriseDB.
2008-01-03 DP  1.8.2  Ensure the password and confirmed password always match
                      when adding or editing roles or users.
2008-01-02 DP  1.8.1  Fix a bug that could cause a crash on GTK when closing
                      the query tool in certain circumstances.
2008-01-02 DP  1.8.1  Avoid a crash if the connection is lost and the Functions
                      node is refreshed.
2008-01-02 DP  1.8.1  Avoid crashes when working with objects with % characters
                      in the name.
2008-01-01 DP  1.8.1  Properly reverse-engineer the SQL for indexes with DESC,
                      NULLS FIRST or NULLS LAST column options. 
2008-01-01 DP  1.8.1  Only offer the Jobs node if the user can access the
                      pgagent schema.
2007-12-19 DP  1.8.1  Ensure the 'Create Rule' context menu option is always