@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-01-07 DP  1.8.2  Undecorated out-param types must be included in EDB-SPL
+                      function signatures when altering comments or privileges
+                      or dropping functions or procedures.
 2008-01-07 DP  1.8.2  Ensure enums are offered as datatypes for columns.
 2008-01-07 DP  1.8.2  Fix column dialogue to allow proper modification of array
                       columns per Erwin.
@@ -1076,6 +1079,7 @@ Date       Dev Ver    Change details
 2003-08-07 AP  0.9.2  help system cleanups, support of CHM help for win32.
 2003-08-07 AP  0.9.2  Added missing comment in domain property.
 2003-08-06 DP  0.9.2  Bumped version number.
+
 
 
 
